# torrey_public

./: .gitignore  CMakeLists.txt  cpptest.cpp  template_launch.json  test.py  todo.txt
CImg/CImg-3.2.5/examples/: CImg_demo  captcha  curve_editor2d  dtmri_view3d  edge_explorer2d  fade_images  gaussian_fit1d  generate_loop_macros  hough_transform2d  image2ascii  image_registration2d  image_surface3d  jawbreaker  mcf_levelsets2d  mcf_levelsets3d  odykill  pde_TschumperleDeriche2d  pde_heatflow2d  plotter1d  radon_transform2d  scene3d  spherical_function3d  tetris  tron  tutorial  use_RGBclass  use_chlpca  use_draw_gradient  use_nlmeans  use_skeleton  wavelet_atrous
custom_scenes/character/: attributions.txt  char.mtl  char.ply  char.xml
custom_scenes/steel-groupers/: attributions.txt  groupers.xml  model.mtl  model.ply
custom_scenes/steel-groupers/source/: MechFish_Lowpoly.fbx
custom_scenes/steel-groupers/textures/: skybox.png~  skyboxattrib.txt
src/: hw1.cpp  hw1_scenes.h  hw2.cpp  hw3.cpp  hw4.cpp  main.cpp
src/custom/: blinn_phong.cpp  blinn_phong_microfacet.cpp  bounding_box.cpp  bounding_box.h  camera.h  classdef.h  lambert.cpp  materials.cpp  materials.h  onb.cpp  onb.h  pcg.h  phong.cpp  ray.cpp  ray.h  renderer.h  sah.cpp  sah.h  scene.cpp  scene.h  shapes.cpp  shapes.h  utils.cpp  utils.h
src/tests/: bvh_tests.cpp  diffuse_interreflection_tests.cpp  extra_tests.cpp  normalmap_tests.cpp  onb_tests.cpp  sample_test.cpp
